--- a/Demos/Convert/Convert.dproj
+++ b/Demos/Convert/Convert.dproj
@@ -1,11 +1,11 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{dba0fef6-11a1-4239-b083-7d6cd7d3efef}</ProjectGuid>
-    <MainSource>Browser.dpr</MainSource>
+    <ProjectGuid>{a5ea4381-0b4b-4fa2-b186-5e12fb40b266}</ProjectGuid>
+    <MainSource>Convert.dpr</MainSource>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-    <DCC_DependencyCheckOutputName>Browser.exe</DCC_DependencyCheckOutputName>
+    <DCC_DependencyCheckOutputName>Convert.exe</DCC_DependencyCheckOutputName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Version>7.0</Version>
@@ -35,7 +35,7 @@
       <Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
     </Parameters>
     <VersionInfo>
-      <VersionInfo Name="IncludeVerInfo">True</VersionInfo>
+      <VersionInfo Name="IncludeVerInfo">False</VersionInfo>
       <VersionInfo Name="AutoIncBuild">False</VersionInfo>
       <VersionInfo Name="MajorVer">1</VersionInfo>
       <VersionInfo Name="MinorVer">0</VersionInfo>
@@ -46,8 +46,8 @@
       <VersionInfo Name="Special">False</VersionInfo>
       <VersionInfo Name="Private">False</VersionInfo>
       <VersionInfo Name="DLL">False</VersionInfo>
-      <VersionInfo Name="Locale">1033</VersionInfo>
-      <VersionInfo Name="CodePage">1252</VersionInfo>
+      <VersionInfo Name="Locale">2052</VersionInfo>
+      <VersionInfo Name="CodePage">936</VersionInfo>
     </VersionInfo>
     <VersionInfoKeys>
       <VersionInfoKeys Name="CompanyName"></VersionInfoKeys>
@@ -62,17 +62,20 @@
       <VersionInfoKeys Name="Comments"></VersionInfoKeys>
     </VersionInfoKeys>
     <Source>
-      <Source Name="MainSource">Browser.dpr</Source>
+      <Source Name="MainSource">Convert.dpr</Source>
     </Source>
   </Delphi.Personality> </BorlandProject></BorlandProject>
   </ProjectExtensions>
   <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
   <ItemGroup>
-    <DelphiCompile Include="Browser.dpr">
+    <DelphiCompile Include="Convert.dpr">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
     <DCCReference Include="Main.pas">
       <Form>MainForm</Form>
+    </DCCReference>
+    <DCCReference Include="Properties.pas">
+      <Form>PropertyDialog</Form>
     </DCCReference>
   </ItemGroup>
 </Project>
