--- a/Demos/OneImage/OneImage.dproj
+++ b/Demos/OneImage/OneImage.dproj
@@ -1,11 +1,11 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{dba0fef6-11a1-4239-b083-7d6cd7d3efef}</ProjectGuid>
-    <MainSource>Browser.dpr</MainSource>
+    <ProjectGuid>{975318ba-0327-4abb-89a4-30e288f6cb4d}</ProjectGuid>
+    <MainSource>OneImage.dpr</MainSource>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-    <DCC_DependencyCheckOutputName>Browser.exe</DCC_DependencyCheckOutputName>
+    <DCC_DependencyCheckOutputName>OneImage.exe</DCC_DependencyCheckOutputName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Version>7.0</Version>
@@ -35,7 +35,7 @@
       <Parameters Name="LoadUnspecifiedSymbols">False</Parameters>
     </Parameters>
     <VersionInfo>
-      <VersionInfo Name="IncludeVerInfo">True</VersionInfo>
+      <VersionInfo Name="IncludeVerInfo">False</VersionInfo>
       <VersionInfo Name="AutoIncBuild">False</VersionInfo>
       <VersionInfo Name="MajorVer">1</VersionInfo>
       <VersionInfo Name="MinorVer">0</VersionInfo>
@@ -46,8 +46,8 @@
       <VersionInfo Name="Special">False</VersionInfo>
       <VersionInfo Name="Private">False</VersionInfo>
       <VersionInfo Name="DLL">False</VersionInfo>
-      <VersionInfo Name="Locale">1033</VersionInfo>
-      <VersionInfo Name="CodePage">1252</VersionInfo>
+      <VersionInfo Name="Locale">2052</VersionInfo>
+      <VersionInfo Name="CodePage">936</VersionInfo>
     </VersionInfo>
     <VersionInfoKeys>
       <VersionInfoKeys Name="CompanyName"></VersionInfoKeys>
@@ -62,15 +62,26 @@
       <VersionInfoKeys Name="Comments"></VersionInfoKeys>
     </VersionInfoKeys>
     <Source>
-      <Source Name="MainSource">Browser.dpr</Source>
+      <Source Name="MainSource">OneImage.dpr</Source>
     </Source>
   </Delphi.Personality> </BorlandProject></BorlandProject>
   </ProjectExtensions>
   <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
   <ItemGroup>
-    <DelphiCompile Include="Browser.dpr">
+    <DelphiCompile Include="OneImage.dpr">
       <MainSource>MainSource</MainSource>
     </DelphiCompile>
+    <DCCReference Include="..\..\GraphicColor.pas" />
+    <DCCReference Include="..\..\GraphicCompression.pas" />
+    <DCCReference Include="..\..\GraphicEx.pas" />
+    <DCCReference Include="..\..\jJPG.pas" />
+    <DCCReference Include="..\..\JPG.pas" />
+    <DCCReference Include="..\..\jpgJPG.pas">
+      <ModuleName>JPG</ModuleName>
+    </DCCReference>
+    <DCCReference Include="..\..\jpJPG.pas" />
+    <DCCReference Include="..\..\MZLib.pas" />
+    <DCCReference Include="..\proj_common.pas" />
     <DCCReference Include="Main.pas">
       <Form>MainForm</Form>
     </DCCReference>
